--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,39 +6,39 @@
   
   
   "proverbTitle": "Proverb",
-  "proverb1": "agha ele baghre dor nei, pada ele rajar laj nei.",
-  "proverb2": "jade jad togay, hangara gad togay.",
-  "proverb3": "tagol dadottun samei dangor.",
-  "proverb4": "dugottun ogoman dangor.",
-  "proverb5": "dhorimme jeda, erimme mora.",
-  "proverb6": "duj hele uj bare.",
-  "proverb7": "nijo alu nije hure.",
-  "proverb8": "nijo bhat hei por goru chorana.",
-  "proverb9": "nei mogottun han mok bhala, shobai na padhe rajar jhi bhala.",
-  "proverb10": "panite dhubi agana.",
-  "proverb11": "bandorrer hi al chora.",
-  "proverb12": "bala dharele bala pai, dharayee bala hudu jay.",
-  "proverb13": "boidyottun pothyo bej.",
-  "proverb14": "maje na chhene jal, bondhay na chhene hal.",
-  "proverb15": "jar hame jare saje, ar hame ladi mare.",
-  "proverb16": "je madit ajar hay, se madit bhor di udona.",
-  "proverb17": "rupor hala, gune bhala.",
-  "proverb18": "sap oi fude, oja oi jhare.",
-  "proverb19": "suj bharade bharade hurul bharana.",
-  "proverb20": "uno hele duno bol.",
-  "proverb21": "jormottun dhormo dangor.",
-  "proverb22": "hed yeijay hugur bhugona.",
-  "proverb23": "atte atte nala, gade gade gola.",
-  "proverb24": "ranga hadiyanou dhoy para, bor gung o chai para.",
-  "proverb25": "bap cha put cha, ma cha jhi cha.",
-  "proverb26": "gaz chhene bagle, manij chhene agle.",
-  "proverb27": "guiyo hobal surungot, bandor hobal taregont.",
-  "proverb28": "di dhakke seredi panite porana.",
-  "proverb29": "saghi sade sade jhul shugona.",
-  "proverb30": "echhe bada hellye s.",
-  "proverb31": "eb madattun bijol n yeje gori bor bor hada.",
-  "proverb32": "chadore benge ghinei, benger chade ghinei.",
-  "proverb33": "por jagat sep phelanaw dhor.",
-  "proverb34": "nuo nuo bangri nuo nuo rong, puron ale phele diong."
+  "proverb1": "Agha ele baghore dor nei, pada ele rajar laj nei.",
+  "proverb2": "Jade jad togay, hangara gad togay.",
+  "proverb3": "Tagol dadottun samei dangor.",
+  "proverb4": "Dugottun ogoman dangor.",
+  "proverb5": "Dhorimme jeda, erimme mora.",
+  "proverb6": "Duj hele ujh bare.",
+  "proverb7": "Nijo alu nije hure.",
+  "proverb8": "Nijo bhat hei por goru sorana.",
+  "proverb9": "Nei mogottun han mok bhala, shobai no padhe rajar jhi bhala.",
+  "proverb10": "Panit dhubi agana.",
+  "proverb11": "Bandorror hi al chora.",
+  "proverb12": "Bala dharele bala pai, dharayee bala hudu jay.",
+  "proverb13": "Boidyottun pothyo bej.",
+  "proverb14": "Maje na chhene jal, bondhay na chhene hal.",
+  "proverb15": "Jar hame jare saje, ar hame ladi mare.",
+  "proverb16": "Je madit ajar hay, se madit bhor di udona.",
+  "proverb17": "Rupor hala, gune bhala.",
+  "proverb18": "Sap oi fude, oja oi jhare.",
+  "proverb19": "Suj bharade bharade hurul bharana.",
+  "proverb20": "Uno hele duno bol.",
+  "proverb21": "Jormottun dhormo dangor.",
+  "proverb22": "Hed yeijay hugur bhugona.",
+  "proverb23": "Atte atte nala, gade gade gola.",
+  "proverb24": "Ranga hadiyanou dhoy para, bor gung o chai para.",
+  "proverb25": "Bap cha put cha, ma cha jhi cha.",
+  "proverb26": "Gaz chhene bagle, manij chhene agle.",
+  "proverb27": "Guiyo hobal surungot, bandor hobal taregont.",
+  "proverb28": "Di dhakke seredi panite porana.",
+  "proverb29": "Saghi sade sade jhul shugona.",
+  "proverb30": "Echhe bada hellye s.",
+  "proverb31": "Ebo madattun bijol n yeje gori bor bor hada.",
+  "proverb32": "Chadore benge ghinei, benger chade ghinei.",
+  "proverb33": "Por jagat sep phelanaw dhor.",
+  "proverb34": "Nuo nuo bangri nuo nuo rong, puron ale phele diong."
 
 }
