Added Drawing Page

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -39,6 +39,16 @@
     "proverb31": "এব মাদাত্তুন বিজল ন যেয়ে গরি বড় বড় হদা।",
     "proverb32": "চাদরে বেঙে ঘিনেই, বেঙরে চাদে ঘিনেই।",
     "proverb33": "পর জাগাত সেপ ফেলানাও ধর।",
-    "proverb34": "নুও নুও বাঙরি নুও নুও রঙ, পুরন অলে ফেলে দিওং."
+    "proverb34": "নুও নুও বাঙরি নুও নুও রঙ, পুরন অলে ফেলে দিওং.",
   
+
+    "lesson":"পাঠ",
+    "vowel": "স্বরবর্ণ",
+    "vowelChakma":"গাইমাত্যা অহ্’রক",
+    "consonant":"ব্যঞ্জনবর্ণ",
+    "consonantChakma":"বলেমাত্যা অহ্’রক",
+    "diacritics":"অণুচিহ্ন",
+    "diacriticsChakma":"মাজারা পাত",
+    "numerals":"সংখ্যা",
+    "numeralsChakma":"নাদা পাত"
 }
